--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,15 @@
     <h1 id="login-header">Login</h1>
     
     <div id="login-error-msg-holder">
-      <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+      <!-- <p id="login-error-msg" *ngIf="errorMessage">Invalid username <span id="error-msg-second-line">and/or password</span></p> -->
+      <p *ngIf="errorMessage">Invalid username and/or password</p>
     </div>
     
     <form id="login-form">
       <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
       <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-      <input type="submit" value="Login" id="login-form-submit">
-      <button (click)="onClickButton($event)">click</button>
+      <input type="submit" value="Login" id="login-form-submit" (click)="onClickButton($event)">
+      <!-- <button (click)="onClickButton($event)">click</button> -->
     </form>
   
   </main>
