--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
     <h1 id="login-header">Login</h1>
     
     <div id="login-error-msg-holder">
+      <p>username: <b>user</b> <span class="marginLeft">password: <b>password</b> </span></p>
+      <p>username: <b>admin</b>  <span class="marginLeft">password: <b>admin</b> </span></p>
       <!-- <p id="login-error-msg" *ngIf="errorMessage">Invalid username <span id="error-msg-second-line">and/or password</span></p> -->
       <p *ngIf="errorMessage">Invalid username and/or password</p>
     </div>
