--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,5 @@
 #main-holder {
+    margin:0 auto;
     width: 50%;
     height: 70%;
     display: grid;
@@ -55,6 +56,7 @@
   }
   
   #login-form-submit {
+    margin-bottom:20px;
     width: 100%;
     padding: 7px;
     border: none;
@@ -64,4 +66,13 @@
     background-color: #3a3a3a;
     cursor: pointer;
     outline: none;
+  }
+  
+  .login-error-msg-holder p{
+    margin:0px;
+    padding:0px;
+  }
+  
+  .marginLeft{
+    margin-left:4px;
   }
